[package]
name = "soulgraph"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uuid = { version = "1.11.1", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }

[dev-dependencies]
approx = "0.5.1"
